trunk/CompilersLab/src/pico/PicoParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g 2010-01-27 21:31:54
package pico ;
import org.antlr.runtime.tree.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class PicoParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDR", "ASSIGN", "BREAK", "BLOCK", "DECL", "DECLBLOCK", "ELSE", "GETD", "IF", "IFELSE", "INIT", "INT", "MAIN", "PRINTD", "PRINTS", "PRINTF", "SCANF", "UMINUS", "WHILE", "AMP", "AND", "BITNOT", "BITOR", "BITXOR", "COMMA", "DIVIDE", "EQUAL", "GREATER", "GREATER_EQUAL", "LESS", "LESS_EQUAL", "LPAREN", "LBRACKET", "MINUS", "MOD", "NOT_EQUAL", "NOT", "OR", "PLUS", "RBRACKET", "RPAREN", "SEMICOLON", "SHIFT_LEFT", "SHIFT_RIGHT", "TIMES", "NL", "WS", "COMMENT_1", "COMMENT_2", "COMMENT_3", "LETTER", "DIGIT", "IDENT", "NUMBER", "STRING", "'='"
    };
    public static final int MAIN=16;
    public static final int BITNOT=25;
    public static final int WHILE=22;
    public static final int LETTER=54;
    public static final int IFELSE=13;
    public static final int AMP=23;
    public static final int MOD=38;
    public static final int DECLBLOCK=9;
    public static final int NOT=40;
    public static final int AND=24;
    public static final int EOF=-1;
    public static final int BREAK=6;
    public static final int ADDR=4;
    public static final int LPAREN=35;
    public static final int IF=12;
    public static final int LBRACKET=36;
    public static final int RPAREN=44;
    public static final int COMMENT_2=52;
    public static final int SCANF=20;
    public static final int GREATER=31;
    public static final int COMMENT_3=53;
    public static final int COMMENT_1=51;
    public static final int COMMA=28;
    public static final int NOT_EQUAL=39;
    public static final int T__59=59;
    public static final int EQUAL=30;
    public static final int BITXOR=27;
    public static final int LESS=33;
    public static final int IDENT=56;
    public static final int PLUS=42;
    public static final int DIGIT=55;
    public static final int NL=49;
    public static final int RBRACKET=43;
    public static final int DIVIDE=29;
    public static final int ELSE=10;
    public static final int NUMBER=57;
    public static final int UMINUS=21;
    public static final int SEMICOLON=45;
    public static final int INT=15;
    public static final int PRINTD=17;
    public static final int MINUS=37;
    public static final int PRINTF=19;
    public static final int SHIFT_LEFT=46;
    public static final int WS=50;
    public static final int SHIFT_RIGHT=47;
    public static final int PRINTS=18;
    public static final int BITOR=26;
    public static final int GETD=11;
    public static final int DECL=8;
    public static final int BLOCK=7;
    public static final int OR=41;
    public static final int ASSIGN=5;
    public static final int LESS_EQUAL=34;
    public static final int TIMES=48;
    public static final int INIT=14;
    public static final int GREATER_EQUAL=32;
    public static final int STRING=58;

    // delegates
    // delegators


        public PicoParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PicoParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return PicoParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g"; }


      Symbols table =  new Symbols();
     private int declareErrors=0;

     private void reportError(Token id, String message ) {
      System.err.println("Error at line "+id.getLine()+" " +message);
      declareErrors++;
      }
     public int getDeclareErrorCount(){
      return declareErrors;
     }
     


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:144:1: program : ( decl )* main_def EOF ;
    public final PicoParser.program_return program() throws RecognitionException {
        PicoParser.program_return retval = new PicoParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EOF3=null;
        PicoParser.decl_return decl1 = null;

        PicoParser.main_def_return main_def2 = null;


        CommonTree EOF3_tree=null;

        try {
            // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:144:9: ( ( decl )* main_def EOF )
            // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:144:11: ( decl )* main_def EOF
            {
            root_0 = (CommonTree)adaptor.nil();

            // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:144:11: ( decl )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==INT) ) {
                    int LA1_1 = input.LA(2);

                    if ( (LA1_1==IDENT) ) {
                        alt1=1;
                    }


                }


                switch (alt1) {
            	case 1 :
            	    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:144:12: decl
            	    {
            	    pushFollow(FOLLOW_decl_in_program1015);
            	    decl1=decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, decl1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            pushFollow(FOLLOW_main_def_in_program1020);
            main_def2=main_def();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, main_def2.getTree());
            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_program1022); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            EOF3_tree = (CommonTree)adaptor.create(EOF3);
            adaptor.addChild(root_0, EOF3_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class main_def_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "main_def"
    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:147:1: main_def : INT MAIN LPAREN RPAREN block -> ^( MAIN block ) ;
    public final PicoParser.main_def_return main_def() throws RecognitionException {
        PicoParser.main_def_return retval = new PicoParser.main_def_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token INT4=null;
        Token MAIN5=null;
        Token LPAREN6=null;
        Token RPAREN7=null;
        PicoParser.block_return block8 = null;


        CommonTree INT4_tree=null;
        CommonTree MAIN5_tree=null;
        CommonTree LPAREN6_tree=null;
        CommonTree RPAREN7_tree=null;
        RewriteRuleTokenStream stream_RPAREN=new RewriteRuleTokenStream(adaptor,"token RPAREN");
        RewriteRuleTokenStream stream_MAIN=new RewriteRuleTokenStream(adaptor,"token MAIN");
        RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
        RewriteRuleTokenStream stream_LPAREN=new RewriteRuleTokenStream(adaptor,"token LPAREN");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:147:10: ( INT MAIN LPAREN RPAREN block -> ^( MAIN block ) )
            // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:147:13: INT MAIN LPAREN RPAREN block
            {
            INT4=(Token)match(input,INT,FOLLOW_INT_in_main_def1039); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_INT.add(INT4);

            MAIN5=(Token)match(input,MAIN,FOLLOW_MAIN_in_main_def1041); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_MAIN.add(MAIN5);

            LPAREN6=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_main_def1043); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LPAREN.add(LPAREN6);

            RPAREN7=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_main_def1045); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RPAREN.add(RPAREN7);

            pushFollow(FOLLOW_block_in_main_def1049);
            block8=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block8.getTree());


            // AST REWRITE
            // elements: block, MAIN
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 147:44: -> ^( MAIN block )
            {
                // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:147:47: ^( MAIN block )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_MAIN.nextNode(), root_1);

                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "main_def"

    public static class statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:151:2: statement : ( SEMICOLON | block | assignment | if_stmt | while_loop | break_stmt | call );
    public final PicoParser.statement_return statement() throws RecognitionException {
        PicoParser.statement_return retval = new PicoParser.statement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token SEMICOLON9=null;
        PicoParser.block_return block10 = null;

        PicoParser.assignment_return assignment11 = null;

        PicoParser.if_stmt_return if_stmt12 = null;

        PicoParser.while_loop_return while_loop13 = null;

        PicoParser.break_stmt_return break_stmt14 = null;

        PicoParser.call_return call15 = null;


        CommonTree SEMICOLON9_tree=null;

        try {
            // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:151:12: ( SEMICOLON | block | assignment | if_stmt | while_loop | break_stmt | call )
            int alt2=7;
            switch ( input.LA(1) ) {
            case SEMICOLON:
                {
                alt2=1;
                }
                break;
            case LBRACKET:
                {
                alt2=2;
                }
                break;
            case IDENT:
                {
                alt2=3;
                }
                break;
            case IF:
                {
                alt2=4;
                }
                break;
            case WHILE:
                {
                alt2=5;
                }
                break;
            case BREAK:
                {
                alt2=6;
                }
                break;
            case PRINTF:
            case SCANF:
                {
                alt2=7;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:152:6: SEMICOLON
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    SEMICOLON9=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_statement1077); if (state.failed) return retval;

                    }
                    break;
                case 2 :
                    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:153:8: block
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_block_in_statement1090);
                    block10=block();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, block10.getTree());

                    }
                    break;
                case 3 :
                    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:154:8: assignment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_assignment_in_statement1100);
                    assignment11=assignment();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment11.getTree());

                    }
                    break;
                case 4 :
                    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:155:8: if_stmt
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_if_stmt_in_statement1110);
                    if_stmt12=if_stmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, if_stmt12.getTree());

                    }
                    break;
                case 5 :
                    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:156:8: while_loop
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_while_loop_in_statement1119);
                    while_loop13=while_loop();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, while_loop13.getTree());

                    }
                    break;
                case 6 :
                    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:157:8: break_stmt
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_break_stmt_in_statement1128);
                    break_stmt14=break_stmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, break_stmt14.getTree());

                    }
                    break;
                case 7 :
                    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:158:8: call
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_call_in_statement1137);
                    call15=call();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, call15.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class call_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "call"
    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:160:3: call : ( printf | scanf );
    public final PicoParser.call_return call() throws RecognitionException {
        PicoParser.call_return retval = new PicoParser.call_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        PicoParser.printf_return printf16 = null;

        PicoParser.scanf_return scanf17 = null;



        try {
            // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:160:7: ( printf | scanf )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==PRINTF) ) {
                alt3=1;
            }
            else if ( (LA3_0==SCANF) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:160:9: printf
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_printf_in_call1151);
                    printf16=printf();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, printf16.getTree());

                    }
                    break;
                case 2 :
                    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:161:9: scanf
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_scanf_in_call1163);
                    scanf17=scanf();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, scanf17.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "call"

    public static class block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:164:1: block : ( ( LBRACKET INT )=> LBRACKET ( decl )+ ( statement )* RBRACKET -> ^( DECLBLOCK ( decl )* ( statement )* ) | LBRACKET ( statement )* RBRACKET -> ^( BLOCK ( statement )* ) );
    public final PicoParser.block_return block() throws RecognitionException {
        PicoParser.block_return retval = new PicoParser.block_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token LBRACKET18=null;
        Token RBRACKET21=null;
        Token LBRACKET22=null;
        Token RBRACKET24=null;
        PicoParser.decl_return decl19 = null;

        PicoParser.statement_return statement20 = null;

        PicoParser.statement_return statement23 = null;


        CommonTree LBRACKET18_tree=null;
        CommonTree RBRACKET21_tree=null;
        CommonTree LBRACKET22_tree=null;
        CommonTree RBRACKET24_tree=null;
        RewriteRuleTokenStream stream_LBRACKET=new RewriteRuleTokenStream(adaptor,"token LBRACKET");
        RewriteRuleTokenStream stream_RBRACKET=new RewriteRuleTokenStream(adaptor,"token RBRACKET");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl");
        try {
            // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:164:7: ( ( LBRACKET INT )=> LBRACKET ( decl )+ ( statement )* RBRACKET -> ^( DECLBLOCK ( decl )* ( statement )* ) | LBRACKET ( statement )* RBRACKET -> ^( BLOCK ( statement )* ) )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==LBRACKET) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==INT) && (synpred1_Pico())) {
                    alt7=1;
                }
                else if ( (LA7_1==BREAK||LA7_1==IF||(LA7_1>=PRINTF && LA7_1<=SCANF)||LA7_1==WHILE||LA7_1==LBRACKET||LA7_1==RBRACKET||LA7_1==SEMICOLON||LA7_1==IDENT) ) {
                    alt7=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:165:10: ( LBRACKET INT )=> LBRACKET ( decl )+ ( statement )* RBRACKET
                    {
                    LBRACKET18=(Token)match(input,LBRACKET,FOLLOW_LBRACKET_in_block1203); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_LBRACKET.add(LBRACKET18);

                    if ( state.backtracking==0 ) {
                       table.pushScope(); 
                    }
                    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:167:14: ( decl )+
                    int cnt4=0;
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==INT) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:167:16: decl
                    	    {
                    	    pushFollow(FOLLOW_decl_in_block1222);
                    	    decl19=decl();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_decl.add(decl19.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt4 >= 1 ) break loop4;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(4, input);
                                throw eee;
                        }
                        cnt4++;
                    } while (true);

                    // /Users/HassassiN/Desktop/Work/workspace/CompilersLab/src/pico/Pico.g:167:23: ( statement )*
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==BREAK||LA5_0==IF||(LA5_0>=PRINTF && LA5_0<=SCANF)||LA5_0==WHILE||LA5_0==LBRACKET||LA5_0==SEMICOLON||LA5_0==IDENT) ) {
                            alt5=1;
                        }

